--- a/main_new.html
+++ b/main_new.html
@@ -44,7 +44,6 @@
 
 
   <div class="container">
-
     <div class="slider-box">
       <div class="slider">
 
@@ -132,8 +131,7 @@
 
   <div class="container">
     <div class="our-platform-box">
-      <div class="video-preview" style="background-image: url('assets/images/mongol-bottom.png');">
-      </div>
+      <div class="video-preview" style="background-image: url('assets/images/mongol-bottom.png');"></div>
 
       <div class="about-us">
         <p class="text"><span class="uppercase">Наша миссия</span> – казахстанскому продакшну пора шагать в ногу с
@@ -150,6 +148,17 @@
       </div>
 
       <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+
+      <div class="shadow-layer first">
+        <div class="shadow-layer-films">
+          <a href="#" class="shadow-film" data-background-color="ebcd7f"><img src="assets/images/mongol-layer.png"
+              alt="" class="shadow-film-image"></a>
+          <a href="#" class="shadow-film" data-background-color="dda084"><img src="assets/images/baykonur-layer.png"
+              alt="" class="shadow-film-image"></a>
+          <a href="#" class="shadow-film" data-background-color="b6a896"><img src="assets/images/tulpan-layer.png"
+              alt="" class="shadow-film-image"></a>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -240,6 +249,15 @@
               </p>
             </li>
           </ul>
+        </div>
+      </div>
+
+      <div class="shadow-layer second">
+        <div class="shadow-layer-films">
+          <a href="#" class="shadow-film" data-background-color="999a9e"><img src="assets/images/electric-layer.png"
+              alt="" class="shadow-film-image"></a>
+          <a href="#" class="shadow-film" data-background-color="C9B2A3"><img src="assets/images/star-layer.png" alt=""
+              class="shadow-film-image"></a>
         </div>
       </div>
     </div>
@@ -562,6 +580,114 @@
           </div>
         </div>
       </div>
+
+
+      <div class="shadow-layer third">
+        <div class="shadow-layer-films">
+          <a href="#" class="shadow-film" data-background-color="B0CAEA"><img src="assets/images/ayka-mini.jpg" alt=""
+              class="shadow-film-image"></a>
+          <a href="#" class="shadow-film" data-background-color="B8B8A3"><img src="assets/images/market-mini.jpg" alt=""
+              class="shadow-film-image"></a>
+          <a href="#" class="shadow-film" data-background-color="B8B8A3"><img src="assets/images/letters-mini.png"
+              alt="" class="shadow-film-image"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="locations-box">
+      <h3 class="title underlined">ЛОКАЦИИ</h3>
+
+      <div class="loc-controls">
+        <span class="prev-loc"></span>
+        <span class="next-loc"></span>
+      </div>
+
+      <div class="locations">
+        <div class="location">
+          <img class="img-block" src="assets/images/charyn.jpg" alt="">
+          <div class="location-body">
+            <div class="row">
+              <div class="col-7">
+                <div class="loc-left">
+                  <p class="text uppercase">
+                    Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
+                  </p>
+                  <p class="text">
+                    Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна расположена в 4
+                    климатических зонах, что дает вам возможность провести съемки на фоне разных пейзажей, не пересекая
+                    границ!
+                  </p>
+                </div>
+              </div>
+              <div class="col-5">
+                <div class="loc-right">
+                  <div class="place-name">
+                    <p class="text">Каньон Чарын</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="location">
+          <img class="img-block" src="assets/images/charyn.jpg" alt="">
+          <div class="location-body">
+            <div class="row">
+              <div class="col-7">
+                <div class="loc-left">
+                  <p class="text uppercase">
+                    Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
+                  </p>
+                  <p class="text">
+                    Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна расположена в 4
+                    климатических зонах, что дает вам возможность провести съемки на фоне разных пейзажей, не пересекая
+                    границ!
+                  </p>
+                </div>
+              </div>
+              <div class="col-5">
+                <div class="loc-right">
+                  <div class="place-name">
+                    <p class="text">Каньон Чарын</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="location">
+          <img class="img-block" src="assets/images/charyn.jpg" alt="">
+          <div class="location-body">
+            <div class="row">
+              <div class="col-7">
+                <div class="loc-left">
+                  <p class="text uppercase">
+                    Степи, леса, пустыни, горы, озера, каньоны – и все это в одной стране!
+                  </p>
+                  <p class="text">
+                    Казахстан – это кладезь живописных, не открытых миру локаций для съемок. Страна расположена в 4
+                    климатических зонах, что дает вам возможность провести съемки на фоне разных пейзажей, не пересекая
+                    границ!
+                  </p>
+                </div>
+              </div>
+              <div class="col-5">
+                <div class="loc-right">
+                  <div class="place-name">
+                    <p class="text">Каньон Чарын</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a href="#" class="button white">ПОСМОТРЕТЬ ЛОКАЦИИ</a>
     </div>
   </div>
 
@@ -696,42 +822,6 @@
       </div>
     </div>
   </div>
-
-  <div class="shadow-layer first">
-    <div class="shadow-layer-films">
-      <a href="#" class="shadow-film" data-background-color="ebcd7f"><img src="assets/images/mongol-layer.png" alt=""
-          class="shadow-film-image"></a>
-      <a href="#" class="shadow-film" data-background-color="dda084"><img src="assets/images/baykonur-layer.png" alt=""
-          class="shadow-film-image"></a>
-      <a href="#" class="shadow-film" data-background-color="b6a896"><img src="assets/images/tulpan-layer.png" alt=""
-          class="shadow-film-image"></a>
-    </div>
-  </div>
-
-  <div class="shadow-layer second">
-    <div class="shadow-layer-films">
-      <a href="#" class="shadow-film" data-background-color="999a9e"><img src="assets/images/electric-layer.png" alt=""
-          class="shadow-film-image"></a>
-      <a href="#" class="shadow-film" data-background-color="9f8d81"><img src="assets/images/star-layer.png" alt=""
-          class="shadow-film-image"></a>
-      <a href="#" class="shadow-film" data-background-color="ebcd7f"><img src="assets/images/mongol-layer.png" alt=""
-          class="shadow-film-image"></a>
-    </div>
-  </div>
-
-  <div class="relative">
-    <div class="shadow-layer third">
-      <div class="shadow-layer-films">
-        <a href="#" class="shadow-film" data-background-color="828279"><img src="assets/images/market-layer.png" alt=""
-            class="shadow-film-image"></a>
-        <a href="#" class="shadow-film" data-background-color="538ea1"><img src="assets/images/astana-love-layer.png"
-            alt="" class="shadow-film-image"></a>
-        <a href="#" class="shadow-film" data-background-color="71666f"><img
-            src="assets/images/letter-to-angel-layer.png" alt="" class="shadow-film-image"></a>
-      </div>
-    </div>
-  </div>
-
 
 </body>
 
