--- a/main_new.html
+++ b/main_new.html
@@ -514,74 +514,163 @@
       </div>
 
       <div class="costs-subheader">
-        <p class="text uppercase">Мы разработали два уникальных предложения регистрации в Первой открытой актерской базе
-          на год.</p>
-        <p class="text">На нашем портале вас смогут найти, и, самое главное, оценить ваши актерские способности ВСЕ
-          кастинг-директора и
-          режиссеры Центральной Азии, Европы и США.</p>
+        <p class="text uppercase">Мы разработали для вас несколько пакетов, учитывая во внимание статус, опыт и
+          возможности каждого, кто регистрируется на платформе.</p>
+        <p class="text">В каждый пакет входит съемка профессиональных фото и видео-визиток в СТУДИИ EURASIA TALENTS, а
+          также помощь в
+          составлении портфолио.</p>
       </div>
 
-      <div class="costs-table-box">
-        <div class="row">
-          <div class="col-12 col-md-6">
-            <div class="costs-left">
-              <h4 class="title fz15">ПРЕМИУМ</h4>
 
-              <ul class="advantages-list">
-                <li>
-                  <p class="text">подробная анкета актера</p>
-                </li>
-                <li>
-                  <p class="text">от 6 до 10 профессиональных портретных фотографий</p>
-                </li>
-                <li>
-                  <p class="text">фото в рост и возможность дополнить портфолио до 20 фотоснимков</p>
-                </li>
-                <li>
-                  <p class="text">3 студийных видео — видеовизитка на любом языке, а также стихотворение, песня или
-                    танец</p>
-                </li>
-              </ul>
+      <div class="costs-subheaders">
+        <h4 class="title fz15 uppercase">Оплата производится на год вперед, и этому есть несколько причин:</h4>
 
-              <div class="price">
-                <p class="text">35 999 т / за год</p>
-                <p class="text">75 999 Т / для семьи из трех человек / за год</p>
-                <p class="text">55 999 Т / для семьи из двух человек / за год</p>
+        <ul class="advantages-list">
+          <li>
+            <p class="text">Мы сразу отсеиваем тех, кто не настроен серьезно, чтобы не подводить остальных участников
+              нашего сообщества.</p>
+          </li>
+          <li>
+            <p class="text">В течение целого года ваше портфолио будет висеть на сайте, а значит вы стабильно будете
+              получать предложения на участие в различных проектах.</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="container">
+        <div class="advantages-box">
+          <div class="advantages-head">
+            <h3 class="title">СТОИМОСТЬ</h3>
+            <span class="advantages-toggle-button"></span>
+          </div>
+
+          <div class="advantages-body w100" style="display: none;">
+            <div class="costs-table-box">
+              <div class="row">
+                <div class="col-12 col-md-6">
+                  <div class="costs-left">
+                    <h4 class="title fz15">ПРЕМИУМ</h4>
+
+                    <ul class="advantages-list">
+                      <li>
+                        <p class="text">подробная анкета актера</p>
+                      </li>
+                      <li>
+                        <p class="text">от 6 до 10 профессиональных портретных фотографий</p>
+                      </li>
+                      <li>
+                        <p class="text">фото в рост и возможность дополнить портфолио до 20 фотоснимков</p>
+                      </li>
+                      <li>
+                        <p class="text">3 студийных видео — видеовизитка на любом языке, а также стихотворение, песня
+                          или
+                          танец</p>
+                      </li>
+                    </ul>
+
+                    <div class="price">
+                      <p class="text">35 999 т / за год</p>
+                      <p class="text">75 999 Т / для семьи из трех человек / за год</p>
+                      <p class="text">55 999 Т / для семьи из двух человек / за год</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6">
+                  <div class="costs-right">
+                    <h4 class="title fz15">БАЗОВЫЙ</h4>
+
+                    <ul class="advantages-list">
+                      <li>
+                        <p class="text">подробная анкета актера</p>
+                      </li>
+                      <li>
+                        <p class="text">от 6 до 10 профессиональных портретных фотографий</p>
+                      </li>
+                      <li>
+                        <p class="text">фото в рост и возможность дополнить портфолио до 20 фотоснимков</p>
+                      </li>
+                      <li>
+                        <p class="text">3 студийных видео — видеовизитка на любом языке, а также стихотворение, песня
+                          или
+                          танец</p>
+                      </li>
+                    </ul>
+
+                    <div class="price">
+                      <p class="text">19 999 т / за год</p>
+                      <p class="text">40 999 Т / для семьи из трех человек / за год</p>
+                      <p class="text">30 999 Т / для семьи из двух человек / за год</p>
+                      <p class="text">15 999 Т / для пенсионеров, студентов и школьников / за год</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
-            <div class="costs-right">
-              <h4 class="title fz15">БАЗОВЫЙ</h4>
 
-              <ul class="advantages-list">
-                <li>
-                  <p class="text">подробная анкета актера</p>
-                </li>
-                <li>
-                  <p class="text">от 6 до 10 профессиональных портретных фотографий</p>
-                </li>
-                <li>
-                  <p class="text">фото в рост и возможность дополнить портфолио до 20 фотоснимков</p>
-                </li>
-                <li>
-                  <p class="text">3 студийных видео — видеовизитка на любом языке, а также стихотворение, песня или
-                    танец</p>
-                </li>
-              </ul>
-
-              <div class="price">
-                <p class="text">19 999 т / за год</p>
-                <p class="text">40 999 Т / для семьи из трех человек / за год</p>
-                <p class="text">30 999 Т / для семьи из двух человек / за год</p>
-                <p class="text">15 999 Т / для пенсионеров, студентов и школьников / за год</p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 
+      <div class="container">
+        <div class="advantages-box">
+          <div class="advantages-head">
+            <h3 class="title uppercase">Как платформа поможет профессионалам?</h3>
+            <span class="advantages-toggle-button"></span>
+          </div>
 
+          <div class="advantages-body w100" style="display: none;">
+            <div class="costs-table-box">
+
+              <p class="text">
+                Вы сможете оперативно откликаться на новые вакансии от компаний и рассылать им свое портфолио. На
+                платформу
+                можно залить шоурил, эскизы и информацию о прошлых проектах – одним словом, собрать все, что у вас есть,
+                в
+                одном месте!
+              </p>
+              <p class="text">
+                В профайл Профессионала мы включили все пункты, которые обычно интересны опытному продюсеру. Мы
+                позаботимся
+                о том, чтобы ваше портфолио было максимально полным и презентабельным.
+              </p>
+
+              <p class="text red mt">35 999 т / за год</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="advantages-box">
+          <div class="advantages-head">
+            <h3 class="title uppercase">Как платформа поможет компании? </h3>
+            <span class="advantages-toggle-button"></span>
+          </div>
+
+          <div class="advantages-body w100" style="display: none;">
+            <div class="costs-table-box">
+
+              <p class="text">
+                  Став участником сообщества, ваша компания сможет размещать вакансии и объявлять о кастингах. Создавать
+                  проекты, формировать съемочные группы и актерские ансамбли, готовить драфтовые подборы для тендеров – и
+                  все это на одной платформе!
+              </p>
+              <p class="text">
+                  Но что самое главное, вам больше не придется тратить время на поиски нужных людей. У нас самая большая и
+                  обновляемая база казахстанских талантов, которой вы получите полный доступ!
+              </p>
+
+              <p class="text red mt">35 999 т / за год</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+
+      
       <div class="shadow-layer third">
         <div class="shadow-layer-films">
           <a href="#" class="shadow-film" data-background-color="B0CAEA"><img src="assets/images/ayka-mini.jpg" alt=""
@@ -594,6 +683,8 @@
       </div>
     </div>
   </div>
+
+
 
   <div class="container">
     <div class="locations-box">
