--- a/main_new.html
+++ b/main_new.html
@@ -24,7 +24,22 @@
           <ul class="navigation">
             <li class="menu-item"><span class="profile-ico"></span></li>
             <li class="menu-item"><span class="search-ico"></span></li>
-            <li class="menu-item"><span class="menu-ico"></span></li>
+            <li class="menu-item drop-menu">
+              <span class="menu-ico"></span>
+              <ul class="drop-menu-body">
+                <li><a href="#about-us" class="drop-link">О НАС</a></li>
+                <li><a href="#community" class="drop-link">НАШЕ СООБЩЕСТВО</a></li>
+                <li><a href="#auditory" class="drop-link">НАША АУДИТОРИЯ</a></li>
+                <li><a href="#professionals" class="drop-link">профессионалы</a></li>
+                <li><a href="#abusers" class="drop-link">любители</a></li>
+                <li><a href="#childs" class="drop-link">дети</a></li>
+                <li><a href="#cost" class="drop-link">СТОИМОСТЬ</a></li>
+                <li><a href="#locations" class="drop-link">ЛОКАЦИИ</a></li>
+                <li><a href="#partners" class="drop-link">партнеры</a></li>
+                <li><a href="#faq" class="drop-link">FAQ</a></li>
+                <li><a href="#contacts" class="drop-link">КОНТАКТЫ</a></li>
+              </ul>
+            </li>
             <li class="menu-item languages-menu">
               <span class="current-language">EN</span>
               <ul class="languages">
@@ -163,7 +178,7 @@
   </div>
 
   <div class="container">
-    <div class="about-us-box">
+    <div class="about-us-box" id="about-us">
       <div class="row">
         <div class="col-md-6">
           <div class="about-us-head">
@@ -264,7 +279,7 @@
   </div>
 
   <div class="container">
-    <div class="our-community-box">
+    <div class="our-community-box"  id="community">
       <div class="our-community-head">
         <h3 class="title underlined">НАШЕ СООБЩЕСТВО</h3>
       </div>
@@ -288,7 +303,7 @@
 
   <div class="container">
 
-    <div class="carousel-box">
+    <div class="carousel-box" id="professionals">
       <h3 class="title underlined">ПРОФЕССИОНАЛЫ</h3>
 
       <div class="carousel-body">
@@ -329,7 +344,7 @@
       </div>
     </div>
 
-    <div class="carousel-box">
+    <div class="carousel-box" id="abusers">
       <h3 class="title underlined">ЛЮБИТЕЛИ</h3>
 
       <div class="carousel-body">
@@ -370,7 +385,7 @@
       </div>
     </div>
 
-    <div class="carousel-box">
+    <div class="carousel-box" id="childs">
       <h3 class="title underlined">ДЕТИ</h3>
 
       <div class="carousel-body">
@@ -419,7 +434,7 @@
 
 
   <div class="container">
-    <div class="auditory-box">
+    <div class="auditory-box" id="auditory">
       <div class="auditory-head">
         <h3 class="title underlined">НАША АУДИТОРИЯ</h3>
       </div>
@@ -538,7 +553,7 @@
       </div>
 
       <div class="container">
-        <div class="advantages-box">
+        <div class="advantages-box" id="costs">
           <div class="advantages-head">
             <h3 class="title">СТОИМОСТЬ</h3>
             <span class="advantages-toggle-button"></span>
@@ -652,13 +667,13 @@
             <div class="costs-table-box">
 
               <p class="text">
-                  Став участником сообщества, ваша компания сможет размещать вакансии и объявлять о кастингах. Создавать
-                  проекты, формировать съемочные группы и актерские ансамбли, готовить драфтовые подборы для тендеров – и
-                  все это на одной платформе!
+                Став участником сообщества, ваша компания сможет размещать вакансии и объявлять о кастингах. Создавать
+                проекты, формировать съемочные группы и актерские ансамбли, готовить драфтовые подборы для тендеров – и
+                все это на одной платформе!
               </p>
               <p class="text">
-                  Но что самое главное, вам больше не придется тратить время на поиски нужных людей. У нас самая большая и
-                  обновляемая база казахстанских талантов, которой вы получите полный доступ!
+                Но что самое главное, вам больше не придется тратить время на поиски нужных людей. У нас самая большая и
+                обновляемая база казахстанских талантов, которой вы получите полный доступ!
               </p>
 
               <p class="text red mt">35 999 т / за год</p>
@@ -670,7 +685,7 @@
 
       <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
 
-      
+
       <div class="shadow-layer third">
         <div class="shadow-layer-films">
           <a href="#" class="shadow-film" data-background-color="B0CAEA"><img src="assets/images/ayka-mini.jpg" alt=""
@@ -687,7 +702,7 @@
 
 
   <div class="container">
-    <div class="locations-box">
+    <div class="locations-box" id="locations">
       <h3 class="title underlined">ЛОКАЦИИ</h3>
 
       <div class="loc-controls">
@@ -783,7 +798,7 @@
   </div>
 
   <div class="container">
-    <div class="partners-box">
+    <div class="partners-box" id="partners">
       <h3 class="title underlined">ПАРТНЕРЫ</h3>
 
       <div class="partner-body">
@@ -846,7 +861,7 @@
       <footer class="footer">
         <div class="row">
           <div class="col-md-4">
-            <div class="footer-section-head">
+            <div class="footer-section-head" id="contacts">
               <h3 class="title underlined">КОНТАКТЫ</h3>
             </div>
 
@@ -866,7 +881,7 @@
           </div>
 
           <div class="col-md-4">
-            <div class="footer-section-head">
+            <div class="footer-section-head" id="faq">
               <h3 class="title underlined">FAQ</h3>
             </div>
 
