--- a/registration.html
+++ b/registration.html
@@ -7,171 +7,165 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/styles/style.css">
   <script src="https://code.jquery.com/jquery-3.4.0.min.js"
-    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+          integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
   <script src="assets/javascript/slick/slick.js"></script>
   <script src="assets/javascript/main.js"></script>
-  <title>Main page</title>
+  <title>Registration page</title>
 </head>
 
-<body class="blacked">
+<body class="bg-image blacked">
 
-  <div class="container">
-    <div class="header-box">
-      <a href="#" class="link-to-home"><img src="assets/images/logo.svg" alt=""></a>
+<div class="container">`
+  <div class="header-box">
+    <a href="#" class="link-to-home"><img src="assets/images/logo.svg" alt=""></a>
 
-      <header class="header">
-        <nav class="header-nav">
-          <ul class="navigation">
-            <li class="menu-item"><span class="profile-ico"></span></li>
-            <li class="menu-item"><span class="search-ico"></span></li>
-            <li class="menu-item drop-menu">
-              <span class="menu-ico"></span>
-              <ul class="drop-menu-body">
-                <li><a href="#about-us" class="drop-link">О НАС</a></li>
-                <li><a href="#community" class="drop-link">НАШЕ СООБЩЕСТВО</a></li>
-                <li><a href="#auditory" class="drop-link">НАША АУДИТОРИЯ</a></li>
-                <li><a href="#professionals" class="drop-link">профессионалы</a></li>
-                <li><a href="#abusers" class="drop-link">любители</a></li>
-                <li><a href="#childs" class="drop-link">дети</a></li>
-                <li><a href="#cost" class="drop-link">СТОИМОСТЬ</a></li>
-                <li><a href="#locations" class="drop-link">ЛОКАЦИИ</a></li>
-                <li><a href="#partners" class="drop-link">партнеры</a></li>
-                <li><a href="#faq" class="drop-link">FAQ</a></li>
-                <li><a href="#contacts" class="drop-link">КОНТАКТЫ</a></li>
-              </ul>
-            </li>
-            <li class="menu-item languages-menu">
-              <span class="current-language">EN</span>
-              <ul class="languages">
-                <li class="language">RU</li>
-                <li class="language">KZ</li>
-              </ul>
-            </li>
-            <li class="menu-item multilinks">
-              <a href="#" class="menu-link">ВОЙТИ</a>
-              <a href="#" class="menu-link">ЗАРЕГИСТРИРОВАТЬСЯ</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
+    <header class="header">
+      <nav class="header-nav">
+        <ul class="navigation">
+          <li class="menu-item languages-menu">
+            <span class="current-language bg-white">EN</span>
+            <ul class="languages bg-white">
+              <li class="language bg-white">RU</li>
+              <li class="language bg-white">KZ</li>
+            </ul>
+          </li>
+          <li class="menu-item multilinks">
+            <a href="#" class="menu-link">ВОЙТИ</a>
+            <a href="#" class="menu-link">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </div>
+</div>
 
 
-  <div class="container">
-    <div class="slider-box">
-      <div class="slider">
+<div class="container">
+  <div class="slider-box">
+    <div class="slider">
 
-        <div class="slide">
-          <div class="slide-body">
-            <div class="left-side">
-              <h3 class="title underlined mb uppercase">регистрация</h3>
+      <div class="slide">
+        <div class="slide-body">
+          <div class="left-side">
+            <h3 class="title underlined mb uppercase">регистрация</h3>
 
-              <div class="form-box">
-                <form action="">
+            <div class="form-box">
+              <form action="">
+                <input type="text" placeholder="ваше имя">
+                <input type="text" placeholder="ваша фамилия">
+                <input type="email" placeholder="email">
+                <input type="password" placeholder="пароль">
+                <input type="password" placeholder="подтвердите пароль">
+                <input type="checkbox" id="checkbox">
+                <label class="bg-red" for="checkbox">Регистрируясь, Вы принимаете все условия использования
+                  сервиса, политику конфиденциальности и соглашаетесь с обработкой персональных данных</label>
+                <button class="button">зарегистрироваться</button>
+              </form>
 
-                  <input type="text" placeholder="ваше полное имя">
-                  <input type="email" placeholder="email">
 
-                  <button class="button">войти</button>
-                </form>
-
-                <a href="#" class="button facebook-color">ВОЙТИ С ПОМОЩЬЮ FACEBOOK</a>
-              </div>
-
+              <input class="bg-white" type="checkbox" id="checkbox-robot">
+              <label for="checkbox-robot" class="bg-red uppercase">Я не робот</label>
+              <a href="#" class="button facebook-color">зарегистрироваться С ПОМОЩЬЮ FACEBOOK</a>
             </div>
 
-            <div class="right-side">
-              <div class="film-box" data-background-color="b0caea"
-                style="background-image:url('assets/images/slides/market-slide.png')">
-                <div class="film-body">
-                  <div class="awards">
-                  </div>
-                  <h3 class="film-name">БАЗАР</h3>
-                </div>
-              </div>
+            <div class="form-btn">
+                  <span>
+                   <a href="#" class="link-recovery white">Уже есть аккаунт?</a>
+                  </span>
+              <span>
+                    <a href="#" class="link-recovery red">Войти</a>
+                  </span>
+            </div>
+          </div>
+
+          <div class="right-side">
+            <div class="film-box" data-background-color="b0caea"
+                 style="background-image:url('assets/images/slides/market-slide.png')">
             </div>
           </div>
         </div>
-
       </div>
+
     </div>
   </div>
+</div>
 
-
-
-  <div class="container">
-    <div class="footer-box">
-      <footer class="footer">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="footer-section-head" id="contacts">
-              <h3 class="title underlined">КОНТАКТЫ</h3>
-            </div>
-
-            <div class="footer-section-body">
-              <p>Вы можете связаться с нами по номерам:</p>
-
-              <ul class="contacts">
-                <li><a href="#" class="contact">+7 (771) 766 05 00</a></li>
-                <li><a href="#" class="contact">+7 (771) 766 08 00</a></li>
-                <li><a href="#" class="contact">+7 (771) 766 09 00</a></li>
-              </ul>
-
-              <p>Мы расположены по адресу: <br><br> Казахстан, город Алматы, Бульвар Мендикулова, 22, жилой комплекс
-                «ТУРКУАЗ»
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="footer-section-head" id="faq">
-              <h3 class="title underlined">FAQ</h3>
-            </div>
-
-            <div class="footer-section-body">
-              <ul class="links">
-                <li><a href="#" class="link">Dolor sit amet, consectetuer elit?</a></li>
-                <li><a href="#" class="link">Tation ullamcorper suscipit ut?</a></li>
-                <li><a href="#" class="link">Dolor sit amet, consectetuer elit?</a></li>
-                <li><a href="#" class="link">Tation ullamcorper suscipit ut?</a></li>
-                <li><a href="#" class="link">Aliquip ex ea consequat?</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="footer-section-head">
-              <h3 class="title underlined">ДОКУМЕНТЫ</h3>
-            </div>
-
-            <div class="footer-section-body">
-              <ul class="links">
-                <li><a href="#" class="link">Dolor sit amet, consectetuer elit?</a></li>
-                <li><a href="#" class="link">Tation ullamcorper suscipit ut?</a></li>
-                <li><a href="#" class="link">Dolor sit amet, consectetuer elit?</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </footer>
-
+<div class="container">
+  <div class="footer-box">
+    <footer class="footer">
       <div class="row">
-        <div class="col-md-8 offset-md-4">
+        <div class="col-md-4">
+          <div class="footer-section-head" id="contacts">
+            <h3 class="title underlined">КОНТАКТЫ</h3>
+          </div>
 
-          <div class="socials">
-            <h3 class="title small black">ПРИСОЕДИНЯЙТЕСЬ К НАМ</h3>
-            <div class="social-links">
-              <a href="#" class="social-link"><span class="facebook"></span></a>
-              <a href="#" class="social-link"><span class="instagram"></span></a>
-              <a href="#" class="social-link"><span class="youtube"></span></a>
-              <a href="#" class="social-link"><span class="vk"></span></a>
-            </div>
+          <div class="footer-section-body">
+            <p class="bg-white">Вы можете связаться с нами по номерам:</p>
+
+            <ul class="contacts">
+              <li><a href="#" class="contact bg-white">+7 (771) 766 05 00</a></li>
+              <li><a href="#" class="contact bg-white">+7 (771) 766 08 00</a></li>
+              <li><a href="#" class="contact bg-white">+7 (771) 766 09 00</a></li>
+            </ul>
+
+            <p class="bg-white">Мы расположены по адресу: <br><br> Казахстан, город Алматы, Бульвар Мендикулова, 22,
+              жилой комплекс
+              «ТУРКУАЗ»
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="footer-section-head" id="faq">
+            <h3 class="title underlined">FAQ</h3>
+          </div>
+
+          <div class="footer-section-body">
+            <ul class="links">
+              <li><a href="#" class="link bg-white">За что я плачу деньги?</a></li>
+              <li><a href="#" class="link bg-white">Какие гарантии, что меня позовут на съемку?</a></li>
+              <li><a href="#" class="link bg-white">Могу ли я сразу получить свои фотографии и видео?</a></li>
+              <li><a href="#" class="link bg-white">У меня нет опыта и актерского образования, будут ли меня звать в
+                проекты?</a>
+              </li>
+              <li><a href="#" class="link bg-white">ВСЕ ВОПРОСЫ И ОТВЕТЫ</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="footer-section-head">
+            <h3 class="title underlined">ДОКУМЕНТЫ</h3>
+          </div>
+
+          <div class="footer-section-body">
+            <ul class="links">
+              <li><a href="#" class="link bg-white">Lorem ipsum dolor sit amet </a></li>
+              <li><a href="#" class="link bg-white">Consectetuer adipiscing elit </a></li>
+              <li><a href="#" class="link bg-white">Sed diam nonummy</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="row">
+      <div class="col-md-8 offset-md-4">
+
+        <div class="socials">
+          <h3 class="title small bg-white">ПРИСОЕДИНЯЙТЕСЬ К НАМ</h3>
+          <div class="social-links">
+            <a href="#" class="social-link"><span class="facebook-bl"></span></a>
+            <a href="#" class="social-link"><span class="instagram-bl"></span></a>
+            <a href="#" class="social-link"><span class="youtube-bl"></span></a>
+            <a href="#" class="social-link"><span class="vk-bl"></span></a>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
 
 </body>
 
