--- a/step_two.html
+++ b/step_two.html
@@ -1,10 +1,467 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="utf-8">
+  <title>Step page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="colorlib.com">
+
+  <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-$END$
+
+<div class="header-box">
+  <a href="#" class="link-to-home sm-logo"><img src="assets/images/logo.svg" alt=""></a>
+  <h4 class="title-steps">1 шаг</h4>
+  <header class="header sm-header">
+    <nav class="header-nav sm-nav">
+      <ul class="navigation">
+        <li class="menu-item"><span class="profile-ico"></span></li>
+        <li class="menu-item languages-menu">
+          <span class="current-language">EN</span>
+          <ul class="languages">
+            <li class="language">RU</li>
+            <li class="language">KZ</li>
+          </ul>
+        </li>
+        <li class="menu-item multilinks">
+          <a href="#" class="menu-link">ВЫЙТИ</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+</div>
+
+
+<div class="container">
+  <div id="wizard">
+    <h4 class="wizard-title uppercase">анкета актера</h4>
+    <section>
+      <div class="row">
+        <h3 class="title underlined uppercase">Анкета актера</h3>
+        <p class="uppercase">Чем подробнее вы заполните свой профиль, тем выше вы подниметесь во внутреннем рейтинге
+          платформы.<br/><br/>
+          Ваша позиция
+          в рейтинге зависит от количества данных о себе, которые вы указали.</p>
+        <form class="activity-form">
+          <div class="activity-blocks">
+            <input type="radio" id="proffesional" name="actor" value="proffesional">
+            <label for="proffesional">актер профессионал</label>
+            <p>Вы получили высшее актерское образование, уверенно входите в образ по системе Станиславского и за вашими
+              плечами огромный опыт съемок в кинофильмах?</p>
+            <p> А возможно вы талантливый артист из народа и уже не впервые
+              участвуете в крупных проектах?</p>
+            <p class="uppercase"> В обоих этих случаях вы можете смело считать себя профессионалом!</p>
+          </div>
+          <div class="activity-blocks">
+            <input type="radio" id="amateur" name="actor" value="amateur">
+            <label for="amateur">актер любитель</label>
+            <p>Вас привлекает магия кинематографа, неудержимо манит свет софитов.</p>
+            <p>Вы уже участвовали в нескольких
+              небольших проектах или только мечтаете оказаться на съемочной площадке?</p>
+            <p class="uppercase">В таком случае, вы актер-любитель и это прекрасно!</p>
+          </div>
+        </form>
+      </div>
+    </section>
+
+
+    <h4>Область Работы</h4>
+    <section class="section">
+      <div class="row">
+        <h3 class="title underlined uppercase">Область Работы</h3>
+      </div>
+      <div class="row">
+        <h4>Укажите области, в которых вы готовы работать</h4>
+        <form class="form col-6">
+          <div class="work-checkbox">
+            <input type="checkbox" id="cinema">
+            <label class="uppercase" for="cinema">Кино</label>
+          </div>
+
+          <div class="work-checkbox">
+            <input type="checkbox" id="series">
+            <label class="uppercase" for="series">Сериалы</label>
+          </div>
+
+          <div class="work-checkbox">
+            <input type="checkbox" id="tv">
+            <label class="uppercase" for="tv">Телепрограммы</label>
+          </div>
+          <div class="work-checkbox">
+            <input type="checkbox" id="advertising">
+            <label class="uppercase" for="advertising">Реклама</label>
+          </div>
+
+          <div class="work-checkbox">
+            <input type="checkbox" id="theater">
+            <label class="uppercase" for="theater">Театр</label>
+          </div>
+
+        </form>
+      </div>
+      <a href="#" class="forward button">сохранить</a>
+    </section>
+
+
+    <h4 class="wizard-title uppercase">Внешность</h4>
+    <section>
+      <div class="col-6">
+        <h3 class="title underlined uppercase">Внешность</h3>
+      </div>
+      <form class="form col-9">
+        <h3 class="red"> обязательные поля для заполнения (*)</h3>
+        <div class="input-blocks">
+          <label>тип внешности*</label>
+          <select>
+            <option>азиатский</option>
+            <option>европейский</option>
+            <option>кавказский</option>
+            <option>арабский</option>
+            <option>славянский</option>
+            <option>еврейский</option>
+            <option>африканский</option>
+            <option>индийский</option>
+            <option>латино</option>
+            <option>метис</option>
+            <option>мулат</option>
+            <option>другой</option>
+          </select>
+
+        </div>
+        <div class="input-blocks">
+          <label>Цвет Глаз*</label>
+          <select>
+            <option>синие</option>
+            <option>серые</option>
+            <option>карие</option>
+            <option>зеленые</option>
+            <option>другой</option>
+          </select>
+        </div>
+        <div class="input-blocks">
+          <label>Телосложение*</label>
+          <select>
+            <option>атлетичное</option>
+            <option>худое</option>
+            <option>стройное</option>
+            <option>среднее</option>
+            <option>полное</option>
+            <option>лишний вес</option>
+            <option>бодибилдер</option>
+          </select>
+        </div>
+        <div class="input-blocks">
+          <label>цвет волос*</label>
+          <select>
+            <option>блондин</option>
+            <option>брюнет</option>
+            <option>шатен</option>
+            <option>русый</option>
+            <option>рыжий</option>
+            <option>седой</option>
+            <option>другой</option>
+          </select>
+        </div>
+        <div class="input-blocks">
+          <label>Прочие особенности внешности</label>
+          <textarea name="" id="" cols="55" rows="7"></textarea>
+        </div>
+      </form>
+      <a href="#" class="forward button">сохранить</a>
+    </section>
+
+
+    <h4>Образование</h4>
+    <section class="section">
+      <div class="col-6">
+        <h3 class="title underlined uppercase">Внешность</h3>
+      </div>
+      <form class="form col-9">
+        <h3 class="red"> обязательные поля для заполнения (*)</h3>
+        <div class="input-blocks">
+          <label>название университета</label>
+          <input type="text">
+        </div>
+      </form>
+    </section>
+
+
+    <h4>творческий опыт</h4>
+    <section class="section">
+      <div class="col-6">
+        <h3 class="title underlined uppercase">творческий опыт</h3>
+      </div>
+      <form class="form col-9">
+        <div class="input-blocks">
+          <label>тип проекта*</label>
+          <select>
+            <option>Художественный фильм</option>
+            <option>Сериал</option>
+            <option>Короткометражный фильм</option>
+            <option>Документальный фильм</option>
+            <option>Социальный ролик</option>
+          </select>
+        </div>
+        <div class="input-blocks">
+          <label>Название*</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>статус роли*</label>
+          <select>
+            <option>Главная роль</option>
+            <option>Роль второго плана</option>
+            <option>Эпизодическая роль</option>
+            <option>Массовка</option>
+          </select>
+        </div>
+        <div class="input-blocks">
+          <label>Год*</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>Роль*</label>
+          <input type="text" placeholder="Не обязательно">
+        </div>
+        <div class="input-blocks">
+          <label>Режиссёр*</label>
+          <input type="text" placeholder="Не обязательно">
+        </div>
+      </form>
+
+
+      <h3 class="title underlined uppercase">роли в театре</h3>
+      <form class="form col-9">
+        <div class="input-blocks">
+          <label>Театр</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>название*</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>Роль</label>
+          <input type="text" placeholder="Не обязательно">
+        </div>
+        <div class="input-blocks">
+          <label>Режиссёр</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>Год</label>
+          <input type="text" placeholder="Не обязательно">
+        </div>
+      </form>
+
+
+      <h3 class="title underlined uppercase">роли в рекламе</h3>
+      <form class="form col-9">
+        <div class="input-blocks">
+          <label>название*</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>Роль</label>
+          <select>
+            <option>Главная роль</option>
+            <option>Роль второго плана</option>
+            <option>Эпизодическая роль</option>
+            <option>Массовка</option>
+          </select>
+        </div>
+        <div class="input-blocks">
+          <label>Режиссёр</label>
+          <input type="text">
+        </div>
+        <div class="input-blocks">
+          <label>Год</label>
+          <input type="text" placeholder="Не обязательно">
+        </div>
+      </form>
+
+      <h3 class="title underlined uppercase">роли в рекламе</h3>
+      <form class="form col-9">
+        <div class="input-blocks">
+          <label>название*</label>
+          <input type="text" placeholder="Оскар, Золотой глобус, НИКА, Золотая маска">
+        </div>
+        <div class="input-blocks">
+          <label>категория</label>
+          <input type="text" placeholder="Лучшая мужская роль, лучшая женская роль, лучшая режиссура">
+        </div>
+        <div class="input-blocks">
+          <label>Год</label>
+          <input type="text">
+        </div>
+      </form>
+
+
+    </section>
+
+
+    <h4>Видео</h4>
+    <section class="section">
+      <div class="col-6">
+        <h3 class="title underlined uppercase">Видео</h3>
+      </div>
+      <form class="form col-9">
+        <p>Ознакомьтесь с видео-гидом, прежде чем публиковать свои видео. Мы составили его специально для того, чтобы
+          ваше портфолио было максимально презентабельным и полностью раскрывало ваши достоинства.</p>
+        <div class="input-blocks">
+          <label>Видеовизитка</label>
+          <input type="text" placeholder="ссылка на ролик">
+        </div>
+        <div class="input-blocks">
+          <label>Видео 2</label>
+          <input type="text" placeholder="ссылка на ролик / видео с эмоциями">
+        </div>
+        <div class="input-blocks">
+          <label>видео 3</label>
+          <input type="text" placeholder="ссылка на ролик / шоурил">
+        </div>
+        <div class="input-blocks">
+          <label>видео 4</label>
+          <input type="text" placeholder="ссылка на ролик / песня, танец, монолог">
+        </div>
+        <div class="input-blocks">
+          <label>видео 5</label>
+          <input type="text" placeholder="ссылка на ролик / видеопроба">
+        </div>
+      </form>
+    </section>
+
+
+    <h4>Контакты</h4>
+    <section class="section">
+      <div class="col-6">
+        <h3 class="title underlined uppercase">Контакты</h3>
+      </div>
+      <form class="form col-9">
+        <div class="input-blocks">
+          <label>Facebook</label>
+          <input type="text" placeholder="ссылка на профиль">
+        </div>
+        <div class="input-blocks">
+          <label>instagram</label>
+          <input type="text" placeholder="ссылка на профиль">
+        </div>
+        <div class="input-blocks">
+          <label>vk</label>
+          <input type="text" placeholder="ссылка на профиль">
+        </div>
+        <div class="input-blocks">
+          <label>о себе</label>
+          <textarea
+                  name="" id="" cols="30" rows="10"
+                  placeholder="Здесь вы можете написать о себе дополнительную информацию, которая может быть интересна кинодеятелям.">
+          </textarea>
+        </div>
+      </form>
+    </section>
+
+
+    <h4>Здоровье</h4>
+    <section class="section">
+      <div class="col-6">
+        <h3 class="title underlined uppercase">здоровье</h3>
+      </div>
+      <form class="form col-9">
+
+        <div class="input-blocks">
+          <label>Состояние вашего здоровья*</label>
+          <textarea
+                  name="" id="" cols="30" rows="10"
+                  placeholder="Здесь вы можете написать о состоянии вашего здоровья (болезни, хронические, хромота, остуствие конечности)">
+
+          </textarea>
+        </div>
+      </form>
+    </section>
+
+
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="footer-box">
+    <footer class="footer">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="footer-section-head" id="contacts">
+            <h3 class="title underlined">КОНТАКТЫ</h3>
+          </div>
+
+          <div class="footer-section-body">
+            <p>Вы можете связаться с нами по номерам:</p>
+
+            <ul class="contacts">
+              <li><a href="#" class="contact">+7 (771) 766 05 00</a></li>
+              <li><a href="#" class="contact">+7 (771) 766 08 00</a></li>
+              <li><a href="#" class="contact">+7 (771) 766 09 00</a></li>
+            </ul>
+
+            <p>Мы расположены по адресу: <br><br> Казахстан, город Алматы, Бульвар Мендикулова, 22, жилой комплекс
+              «ТУРКУАЗ»
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="footer-section-head" id="faq">
+            <h3 class="title underlined">FAQ</h3>
+          </div>
+
+          <div class="footer-section-body">
+            <ul class="links">
+              <li><a href="#" class="link">За что я плачу деньги?</a></li>
+              <li><a href="#" class="link">Какие гарантии, что меня позовут на съемку?</a></li>
+              <li><a href="#" class="link">Могу ли я сразу получить свои фотографии и видео?</a></li>
+              <li><a href="#" class="link">У меня нет опыта и актерского образования, будут ли меня звать в проекты?</a>
+              </li>
+              <li><a href="#" class="link">ВСЕ ВОПРОСЫ И ОТВЕТЫ</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="footer-section-head">
+            <h3 class="title underlined">ДОКУМЕНТЫ</h3>
+          </div>
+
+          <div class="footer-section-body">
+            <ul class="links">
+              <li><a href="#" class="link">Lorem ipsum dolor sit amet </a></li>
+              <li><a href="#" class="link">Consectetuer adipiscing elit </a></li>
+              <li><a href="#" class="link">Sed diam nonummy</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="row">
+      <div class="col-md-8 offset-md-4">
+
+        <div class="socials">
+          <h3 class="title small black">ПРИСОЕДИНЯЙТЕСЬ К НАМ</h3>
+          <div class="social-links">
+            <a href="#" class="social-link"><span class="facebook"></span></a>
+            <a href="#" class="social-link"><span class="instagram"></span></a>
+            <a href="#" class="social-link"><span class="youtube"></span></a>
+            <a href="#" class="social-link"><span class="vk"></span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script src="assets/javascript/js-steps/jquery-3.3.1.min.js"></script>
+<script src="assets/javascript/js-steps/jquery.steps.js"></script>
+<script src="assets/javascript/main.js"></script>
 </body>
 </html>
