--- a/step_one.html
+++ b/step_one.html
@@ -38,9 +38,13 @@
 
 <div class="container">
   <div id="wizard">
-    <h4 class="wizard-title uppercase">Общие данные</h4>
+
+    <!-- SECTION 1 -->
+
+    <h4 class="uppercase">Общие данные</h4>
+
     <section>
-      <div class="col-6">
+      <div class="">
         <h3 class="title underlined uppercase">Общие данные</h3>
       </div>
       <form class="form col-9">
@@ -67,11 +71,11 @@
           <input type="radio" id="telegram" name="contact" value="telegram">
           <label for="telegram">Telegram</label>
         </div>
-
         <div class="input-blocks">
           <label>номер телефона 2</label>
           <input type="number" placeholder="заполняется на ваше усмотрение">
         </div>
+
 
         <div class="input-checkbox">
           <input type="radio" id="whats-second" name="contact-second" value="whats-app-second">
@@ -79,13 +83,14 @@
           <input type="radio" id="telegram-second" name="contact-second" value="telegram-second">
           <label for="telegram-second">Telegram</label>
         </div>
-
         <div class="input-checkbox">
           <input type="radio" id="women" name="gender" value="women">
           <label for="women">Женский</label>
           <input type="radio" id="men" name="gender" value="men">
           <label for="men">Мужской</label>
         </div>
+
+
         <div class="input-blocks">
           <label for="email">Email*</label>
           <input type="email" id="email">
@@ -107,11 +112,16 @@
           <input type="text">
         </div>
       </form>
+
+
       <a href="#" class="forward button">сохранить</a>
     </section>
 
+    <!-- SECTION 2 -->
+
 
     <h4>Род деятельности</h4>
+
     <section class="section">
       <div class="row">
         <h3 class="title underlined uppercase">выберите род вашей деятельности</h3>
@@ -133,56 +143,65 @@
           </div>
         </form>
       </div>
+
+
       <a href="#" class="forward button">сохранить</a>
     </section>
 
+    <!-- SECTION 3 -->
 
     <h4>Загрузить фото профайла</h4>
+
     <section>
+
       <h3 class="title underlined uppercase">загрузите вашу фотографию</h3>
       <h5 class="photo-title uppercase">Требование к основной фотографии</h5>
-      <div class="photo-section">
-        <div class="photo-blocks">
-          <h3>размер</h3>
-          <img class="vector" src="assets/images/photo-vector.svg" alt="">
-          <p>соотношение сторон фото – 2 х 2 </p>
-        </div>
-        <div class="photo-blocks">
-          <h3>крупность</h3>
-          <img class="vector" src="assets/images/photo-vector.svg" alt="">
-          <p>Лицо в кадре должно быть крупно без солнцезащитных очков и теней</p>
-        </div>
-        <div class="photo-blocks">
-          <h3>фон</h3>
-          <img src="assets/images/photo-bckg.jpg" alt="">
-          <p>Фон в кадре должен быть простым, монотонным без посторонних предметов быта</p>
-        </div>
-        <div class="photo-blocks">
-          <h3>пример</h3>
-          <img src="assets/images/face-16.jpg" alt="">
-        </div>
-      </div>
 
-      <div>
-        <h5 class="photo-title uppercase">Загрузить фотографию</h5>
+      <div class="row">
         <div class="photo-section">
-          <div class="photo-blocks-bottom ">
-            <div class="big-vector-p">
-              <p>Перетащите фотографию сюда <img class="arrow" src="assets/images/row.svg" alt=""></p>
-
-            </div>
+          <div class="photo-blocks">
+            <h3>размер</h3>
+            <img class="vector" src="assets/images/photo-vector.svg" alt="">
+            <p>соотношение сторон фото – 2 х 2 </p>
           </div>
-          <div class="photo-blocks-bottom">
-            <img class="big-vector" src="assets/images/big-vector.svg" alt="">
+          <div class="photo-blocks">
+            <h3>крупность</h3>
+            <img class="vector" src="assets/images/photo-vector.svg" alt="">
+            <p>Лицо в кадре должно быть крупно без солнцезащитных очков и теней</p>
           </div>
-          <div class="photo-blocks-bottom">
-            <p class="photo-text">Минимальный размер фотографии – 500 х 500 пикселей, максимальный размер – 1 500 х 1
-              500 пикселей.<br/><br/> Размер файла не должен привышать 3 мегабайта.</p>
+          <div class="photo-blocks">
+            <h3>фон</h3>
+            <img src="assets/images/photo-bckg.jpg" alt="">
+            <p>Фон в кадре должен быть простым, монотонным без посторонних предметов быта</p>
           </div>
-
+          <div class="photo-blocks">
+            <h3>пример</h3>
+            <img src="assets/images/face-16.jpg" alt="">
+          </div>
         </div>
+
+        <div>
+          <h5 class="photo-title uppercase">Загрузить фотографию</h5>
+          <div class="photo-section">
+            <div class="photo-blocks-bottom ">
+              <div class="big-vector-p">
+                <p>Перетащите фотографию сюда <img class="arrow" src="assets/images/row.svg" alt=""></p>
+              </div>
+            </div>
+            <div class="photo-blocks-bottom">
+              <img class="big-vector" src="assets/images/big-vector.svg" alt="">
+            </div>
+            <div class="photo-blocks-bottom">
+              <p class="photo-text">Минимальный размер фотографии – 500 х 500 пикселей, максимальный размер – 1 500 х 1
+                500 пикселей.<br/><br/> Размер файла не должен привышать 3 мегабайта.</p>
+            </div>
+
+          </div>
+        </div>
+
+
+        <a href="#" class="forward button">сохранить</a>
       </div>
-      <a href="#" class="forward button">сохранить</a>
     </section>
   </div>
 </div>
