--- a/step_two.html
+++ b/step_two.html
@@ -39,7 +39,7 @@
 <!-- SECTION 1 -->
 
 <div class="container">
-  <div id="wizard">
+  <div id="wizard" class="second">
     <h4>анкета актера</h4>
 
     <section>
@@ -186,16 +186,11 @@
           </select>
         </div>
         <label>Рост*</label>
-        <div class="input-blocks flex col-3">
-
+        <div class="input-blocks some flex col-9">
           <input type="text" placeholder="200">
-
-        </div>
-        <div class="input-blocks flex col-3">
           <label>Вес</label>
           <input type="text" placeholder="90">
         </div>
-
         <div class="input-blocks">
           <label>Цвет Глаз*</label>
 
