--- a/step_two.html
+++ b/step_two.html
@@ -185,15 +185,17 @@
             <option>другой</option>
           </select>
         </div>
-        <label>Рост*</label>
-        <div class="input-blocks some flex col-9">
+
+
+        <div class="input-blocks indicator flex col-9">
+          <label>Рост*</label>
           <input type="text" placeholder="200">
           <label>Вес</label>
           <input type="text" placeholder="90">
         </div>
+
         <div class="input-blocks">
           <label>Цвет Глаз*</label>
-
           <select>
             <option>синие</option>
             <option>серые</option>
@@ -201,7 +203,6 @@
             <option>зеленые</option>
             <option>другой</option>
           </select>
-
         </div>
         <div class="input-blocks">
           <label>Телосложение*</label>
@@ -217,7 +218,7 @@
           </select>
         </div>
 
-        <div class="input-blocks flex">
+        <div class="input-blocks">
           <label>Обхват*</label>
           <div class="input-block flex col-9">
             <input type="text" placeholder="90">
@@ -268,11 +269,9 @@
         <div class="input-blocks">
           <label>Обхват головы</label>
           <input type="number" placeholder="90">
-        </div>
-        <div class="input-blocks">
           <label>особенности</label>
         </div>
-        <div class="asd">
+        <div class="features">
           <div class="work-checkbox">
             <input type="checkbox" id="check-28">
             <label class="uppercase" for="check-28">хромота</label>
@@ -340,17 +339,7 @@
             <span>файл загружен</span>
           </div>
         </div>
-        <div class="row">
-          <div class="col-9">
-            <div class="calculator">
-              <h3 class="title uppercase">Добавить</h3>
-              <button id="increment" class="count-button" type="button">+</button>
-              <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
-                     value="1">
-              <button id="decrement" class="count-button" type="button" disabled>-</button>
-            </div>
-          </div>
-        </div>
+
       </form>
 
       <div class="col-9">
@@ -377,17 +366,7 @@
           </div>
         </div>
       </form>
-      <div class="row">
-        <div class="col-9">
-          <div class="calculator">
-            <h3 class="title uppercase">Добавить</h3>
-            <button id="increment" class="count-button" type="button">+</button>
-            <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
-                   value="1">
-            <button id="decrement" class="count-button" type="button" disabled>-</button>
-          </div>
-        </div>
-      </div>
+
       <a href="#" class="forward button">сохранить</a>
     </section>
 
@@ -744,7 +723,7 @@
               <div class="visitors col-12">
 
                 <div class="visitor" id="visitor-1" data-visitor="1">
-                  <h3 class="title underlined uppercase">Роли в кино<span class="visitor-number"> </span></h3>
+                  <h3 class="title underlined uppercase">Роли в кино <span class="visitor-number"> </span></h3>
                   <div class="input-blocks">
                     <label>тип проекта*</label>
                     <select>
@@ -823,17 +802,7 @@
           <label>Год</label>
           <input type="text" placeholder="Не обязательно">
         </div>
-        <div class="row">
-          <div class="col-9">
-            <div class="calculator">
-              <h3 class="title uppercase">Добавить</h3>
-              <button id="increment" class="count-button" type="button">+</button>
-              <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
-                     value="1">
-              <button id="decrement" class="count-button" type="button" disabled>-</button>
-            </div>
-          </div>
-        </div>
+
       </form>
 
 
@@ -863,17 +832,6 @@
           <label>Год</label>
           <input type="text" placeholder="Не обязательно">
         </div>
-        <div class="row">
-          <div class="col-9">
-            <div class="calculator">
-              <h3 class="title uppercase">Добавить</h3>
-              <button id="increment" class="count-button" type="button">+</button>
-              <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
-                     value="1">
-              <button id="decrement" class="count-button" type="button" disabled>-</button>
-            </div>
-          </div>
-        </div>
 
       </form>
 
@@ -894,17 +852,7 @@
           <label>Год*</label>
           <input type="text">
         </div>
-        <div class="row">
-          <div class="col-9">
-            <div class="calculator">
-              <h3 class="title uppercase">Добавить</h3>
-              <button id="increment" class="count-button" type="button">+</button>
-              <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
-                     value="1">
-              <button id="decrement" class="count-button" type="button" disabled>-</button>
-            </div>
-          </div>
-        </div>
+
       </form>
 
       <a href="#" class="forward button">сохранить</a>
@@ -1242,6 +1190,10 @@
     </div>
   </div>
 </div>
+
+
+<script>
+</script>
 
 </body>
 </html>
